feat: add face_locations, face_encodings and compare_faces api methods
